--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,7 +1,7 @@
 .hero-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin: 100px 0;
+  margin: 100px 0 120px 0;
 }
 
 .hero-container .left,
