--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -65,3 +65,9 @@
     padding: 0 1rem;
     margin-bottom: 2rem;
 }
+
+.category-container .star{
+    display: inline;
+    margin-right: 2px;
+    color: rgb(233, 142, 22);
+}
