--- a/src/pages/AddToy/AddToy.css
+++ b/src/pages/AddToy/AddToy.css
@@ -1,3 +1,9 @@
+.add-toy-container {
+  margin: 100px 0;
+  padding: 1.5rem;
+  border-radius: 4px;
+  background-color: #9fc3dc11;
+}
 .add-toy-container .control {
   display: flex;
   flex-direction: column;
@@ -24,4 +30,39 @@
   border-radius: 4px;
   flex-grow: 1;
   color: gray;
+}
+
+.add-toy-container input:focus {
+  outline: 1px solid #034f84;
+}
+
+.add-toy-container input::placeholder {
+  color: rgba(128, 128, 128, 0.552);
+}
+
+.add-toy-container textarea {
+  width: 100%;
+  padding: 0.6rem;
+  font-size: 1rem;
+  color: gray;
+  border: 1px solid #0071f32e;
+  border-radius: 4px;
+}
+
+.add-toy-container textarea:focus {
+  outline: 1px solid #034f84;
+}
+
+.add-toy-container .btn-primary{
+    width: 100%;
+    padding: 1.2rem 0;
+    background: #034f84;
+    color: #fff;
+    border: none;
+    font-size: 1.2rem;
+}
+
+.add-toy-container .btn-primary:hover{
+    box-shadow: 0 0 5px #034f84;
+    background-color: #034e84e8;
 }
