--- a/src/index.css
+++ b/src/index.css
@@ -42,13 +42,14 @@ button {
 }
 
 .loader {
-  border: 16px solid #f3f3f3;
+  border: 12px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 120px;
-  height: 120px;
+  border-top: 12px solid blue;
+  width: 100px;
+  height: 100px;
   -webkit-animation: spin 2s linear infinite; /* Safari */
   animation: spin 2s linear infinite;
+  margin: 120px auto;
 }
 
 /* Safari */
