--- a/src/pages/MyToys/MyToys.css
+++ b/src/pages/MyToys/MyToys.css
@@ -30,3 +30,25 @@ td {
   border: none;
   cursor: pointer;
 }
+
+.my-toys-container th {
+  background: rgba(0, 0, 255, 0.112);
+}
+
+.no-data {
+  text-align: center;
+  margin: 120px 0;
+  color: red;
+}
+
+.my-toys-container img {
+  width: 35px;
+  height: 35px;
+  object-fit: cover;
+  border-radius: 9999px;
+}
+.my-toys-container .name-td {
+  display: flex;
+  align-items: center;
+  gap: 3px;
+}
