--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -2,12 +2,10 @@
   margin-bottom: 120px;
 }
 .gallery-container h2 {
-  font-weight: 500;
-  font-size: 2rem;
+  font-size: 2.5rem;
+  color: #034f84;
   width: min-content;
   margin: 0 auto;
-  border-bottom: 2px dotted;
-  padding: 0 1rem;
   margin-bottom: 2rem;
 }
 
@@ -21,4 +19,13 @@
   width: 100%;
   height: auto;
   object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .gallery {
+    grid-template-columns: 1fr 1fr;
+  }
+  .gallery-container {
+    margin-bottom: 80px;
+  }
 }
