--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  text-align: justify;
+  text-align: left;
   font-size: 14px;
 }
 
@@ -36,6 +36,13 @@ span {
   align-items: center;
 }
 
+.left img{
+  width: 50px;
+  height: 50px;
+  border-radius: 9999px;
+  object-fit: cover;
+}
+
 .footer .logo {
   color: blue;
   font-weight: bold;
@@ -46,6 +53,14 @@ span {
   font-size: 12px;
   color: gray;
 }
+
+.social{
+  font-size: 1.5rem;
+  display: flex;
+  gap: 0.7rem;
+  cursor: pointer;
+}
+
 
 @media (max-width: 768px) {
   .footer .top {
