--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,51 +1,71 @@
 .hero-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin: 100px 0 120px 0;
+
+  border: 1px solid #fff;
 }
 
-.hero-container .left,
-.right {
-  place-self: center;
+/* -----------------------------
+ hero image slider styles starts
+ ------------------------------- */
+
+.hero-container,
+.hero-scene {
+  width: 100vw;
+  height: 100vh;
 }
 
-.hero-container .left > * + * {
-  margin-top: 1rem;
+.hero-scene {
+  perspective: 600px;
+  position: relative;
+}
+.hero-slider,
+.hero-slider-2 {
+  position: absolute;
+  width: 100vw;
+  height: 600px;
+  transform-style: preserve-3d;
+  overflow: hidden;
 }
 
-.hero-container h1 {
-  font-size: 3.9rem;
-  font-weight: 800;
-  line-height: 1.3;
+.hero-slider {
+  transform: rotateY(-60deg);
+  transform-origin: right;
 }
 
-.hero-container img {
+.hero-slider-2 {
+  transform: rotateY(60deg);
+  transform-origin: left;
+}
+
+.hero-slider div,
+.hero-slider-2 div {
+  position: absolute;
+  width: 800px;
+  height: 600px;
+  padding: 1rem;
+}
+
+.hero-slider div {
+  left: -800px;
+  perspective: 600px;
+}
+.hero-slider-2 div {
+  right: -800px;
+}
+
+.hero-slider img {
+  transform-style: preserve-3d;
+  transform: rotateY(180deg);
+}
+
+.hero-slider img,
+.hero-slider-2 img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 1rem;
 }
-
-.hero-container .btn-primary {
-  padding: 0.6rem 1.2rem;
-  margin-top: 2rem;
-  background-color: #000;
-  color: #fff;
-}
-
-.hero-container .btn-primary:hover {
-  background-color: transparent;
-  color: #000;
-}
-
-@media (max-width: 768px) {
-  .hero-container {
-    grid-template-columns: 1fr;
-    gap: 3rem;
-    margin: 80px 0;
-  }
-
-  .hero-container h1 {
-    font-size: 3rem;
-    font-weight: 800;
-    line-height: 1.3;
-  }
-}
+/* -----------------------------
+ hero image slider styles ends
+ ------------------------------- */
