added hero heading and button

--- a/src/layouts/Root.css
+++ b/src/layouts/Root.css
@@ -22,13 +22,13 @@
   pointer-events: none;
 }
 
-.texture {
+/* .texture {
   background-image: url("../../public/assets/texture-bg2.avif");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-}
+} */
 
-.dark-texture-layer {
+/* .dark-texture-layer {
   background-color: rgba(0, 0, 0, 0.6);
-}
+} */
