--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,57 +1,125 @@
-.hero-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+@font-face {
+  font-family: "Brice Bold";
+  src: url("/fonts/Brice/Brice-Bold.otf");
+  font-weight: bold;
+}
+@font-face {
+  font-family: "Brice regular";
+  src: url("../../../public/fonts/Brice/Brice-Regular.otf");
+  font-weight: 400;
+}
 
+.hero-container {
+  /* display: grid;
+  grid-template-columns: 1fr 1fr; */
+
+  /* border: 1px solid #fff; */
+}
+
+.hero-container,
+.hero-scene {
+  position: relative;
+  isolation: isolate;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.hero-layer-contaner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  /* background-color: rgba(10, 38, 71, 0.3); */
+  background-image: linear-gradient(
+    to bottom,
+    rgba(10, 38, 71, 0.3),
+    transparent
+  );
+  display: grid;
+  place-items: center;
+}
+
+.hero-info {
+  text-align: center;
+}
+
+.hero-info h1 {
+  font-size: clamp(2rem, 6vw, 8rem);
+  font-weight: 900;
+  /* text-align: center; */
+  line-height: 1.2;
+  font-family: "Brice Bold";
+  /* font-family: 'Poppins', sans-serif; */
+  /* font-family: 'Work Sans', sans-serif; */
+}
+
+.hero-info a{
+  display: inline-block;
+ margin-block-start: 1rem;
+}
+
+.hero-info button {
+  color: #fff;
+  font-size: 1.5rem;
+  font-family: "Brice regular";
+  padding: 0.4rem 1.5rem;
+  background-color: transparent;
   border: 1px solid #fff;
+  box-shadow: -4px 4px 0px #fff;
+  border-radius: 9999px;
+  cursor: pointer;
+  transition: box-shadow 300ms, border-width 300ms;
+}
+
+.hero-info button:hover {
+  box-shadow: -0px 0px 0px #fff;
 }
 
 /* -----------------------------
  hero image slider styles starts
  ------------------------------- */
 
-.hero-container,
 .hero-scene {
-  width: 100vw;
-  height: 100vh;
-}
-
-.hero-scene {
-  perspective: 600px;
-  position: relative;
+  perspective: 400px;
 }
 .hero-slider,
 .hero-slider-2 {
   position: absolute;
+  top: 50%;
   width: 100vw;
-  height: 600px;
+  height: 100vh;
   transform-style: preserve-3d;
   overflow: hidden;
 }
 
 .hero-slider {
-  transform: rotateY(-60deg);
+  transform: rotateY(-60deg) translate(0, -50%);
   transform-origin: right;
 }
 
 .hero-slider-2 {
-  transform: rotateY(60deg);
+  transform: rotateY(60deg) translate(0, -50%);
   transform-origin: left;
 }
 
 .hero-slider div,
 .hero-slider-2 div {
   position: absolute;
-  width: 800px;
-  height: 600px;
+  width: calc(100vh + 100px);
+  height: 100vh;
   padding: 1rem;
 }
 
 .hero-slider div {
-  left: -800px;
+  left: calc(-100vh - 100px);
   perspective: 600px;
 }
 .hero-slider-2 div {
-  right: -800px;
+  right: calc(-100vh - 100px);
 }
 
 .hero-slider img {
