--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,20 +1,4 @@
-@font-face {
-  font-family: "Brice Bold";
-  src: url("/fonts/Brice/Brice-Bold.otf");
-  font-weight: bold;
-}
-@font-face {
-  font-family: "Brice regular";
-  src: url("../../../public/fonts/Brice/Brice-Regular.otf");
-  font-weight: 400;
-}
 
-.hero-container {
-  /* display: grid;
-  grid-template-columns: 1fr 1fr; */
-
-  /* border: 1px solid #fff; */
-}
 
 .hero-container,
 .hero-scene {
@@ -32,8 +16,6 @@
   z-index: 2;
   width: 100%;
   height: 100%;
-  /* background-color: rgba(0, 0, 0, 0.5); */
-  /* background-color: rgba(10, 38, 71, 0.3); */
   background-image: linear-gradient(
     to bottom,
     rgba(10, 38, 71, 0.3),
@@ -41,6 +23,7 @@
   );
   display: grid;
   place-items: center;
+
 }
 
 .hero-info {
@@ -50,11 +33,8 @@
 .hero-info h1 {
   font-size: clamp(2rem, 6vw, 8rem);
   font-weight: 900;
-  /* text-align: center; */
-  line-height: 1.2;
+  line-height: 1.3;
   font-family: "Brice Bold";
-  /* font-family: 'Poppins', sans-serif; */
-  /* font-family: 'Work Sans', sans-serif; */
 }
 
 .hero-info a {
@@ -62,7 +42,7 @@
   margin-block-start: 1rem;
 }
 
-.hero-info button {
+/* .hero-info button {
   color: #fff;
   font-size: 1.5rem;
   font-family: "Brice regular";
@@ -77,7 +57,7 @@
 
 .hero-info button:hover {
   box-shadow: -0px 0px 0px #fff;
-}
+} */
 
 /* -----------------------------
  hero image slider styles starts
@@ -98,12 +78,12 @@
 
 .hero-slider {
   transform: rotateY(-60deg) translate(0, -50%);
-  transform-origin: right;
+  transform-origin: top right;
 }
 
 .hero-slider-2 {
   transform: rotateY(60deg) translate(0, -50%);
-  transform-origin: left;
+  transform-origin: top left;
 }
 
 .hero-slider div,
