--- a/src/components/NewArival/NewArival.css
+++ b/src/components/NewArival/NewArival.css
@@ -7,7 +7,8 @@
 .new-arrival-container {
   width: 100vw;
   height: 100vh;
-  margin-block-start: clamp(5rem, 10.5vw, 12.5rem);
+  /* margin-block-start: clamp(5rem, 10.5vw, 12.5rem); */
+  margin-block-start: 100px;
   position: relative;
   overflow: hidden;
 }
