--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,12 +1,39 @@
-
-
 .hero-container,
 .hero-scene {
   position: relative;
   isolation: isolate;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+
+}
+
+.hero-container::before{
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  height: 400px;
+  transform: translate(-50%, -50%);
+  /* background-image: linear-gradient(
+  90deg,
+  hsl(240deg 100% 20%) 0%,
+  hsl(289deg 100% 21%) 11%,
+  hsl(315deg 100% 27%) 22%,
+  hsl(329deg 100% 36%) 33%,
+  hsl(337deg 100% 43%) 44%,
+  hsl(357deg 91% 59%) 56%,
+  hsl(17deg 100% 59%) 67%,
+  hsl(34deg 100% 53%) 78%,
+  hsl(45deg 100% 50%) 89%,
+  hsl(55deg 100% 50%) 100%
+); */
+
+background-color: aqua;
+border-radius: 50%;
+
+filter: blur(200px);
+/* opacity: 0.3; */
 }
 
 .hero-layer-contaner {
@@ -16,14 +43,13 @@
   z-index: 2;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(
-    to bottom,
+  /* background-image: linear-gradient(
+    to right,
     rgba(10, 38, 71, 0.3),
     transparent
-  );
+  ); */
   display: grid;
   place-items: center;
-
 }
 
 .hero-info {
@@ -42,29 +68,13 @@
   margin-block-start: 1rem;
 }
 
-/* .hero-info button {
-  color: #fff;
-  font-size: 1.5rem;
-  font-family: "Brice regular";
-  padding: 0.4rem 1.5rem;
-  background-color: transparent;
-  border: 1px solid #fff;
-  box-shadow: -4px 4px 0px #fff;
-  border-radius: 9999px;
-  cursor: pointer;
-  transition: box-shadow 300ms, border-width 300ms;
-}
-
-.hero-info button:hover {
-  box-shadow: -0px 0px 0px #fff;
-} */
-
 /* -----------------------------
  hero image slider styles starts
  ------------------------------- */
 
 .hero-scene {
   perspective: 400px;
+  overflow: hidden;
 }
 .hero-slider,
 .hero-slider-2 {
@@ -113,6 +123,7 @@
   height: 100%;
   object-fit: cover;
   border-radius: 1rem;
+  filter: brightness(0.7);
 }
 /* -----------------------------
  hero image slider styles ends
