--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,8 @@ body {
   -webkit-font-smoothing: antialiased;
   overflow-x: hidden;
   font-family: "Brice regular";
+  background-color: #000;
+  color: #fff;
 }
 img,
 picture,
