--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -1,72 +1,140 @@
 .category-container {
-  margin-bottom: 120px;
-}
-
-.category-container .card {
-  padding: 0.5rem;
-  border: 1px solid #034e849d;
-  border-radius: 4px;
-}
-
-.category-container img {
-  width: 100%;
-  height: 200px;
-  display: block;
-  border-radius: 4px;
-  object-fit: cover;
-}
-
-.category-container .name-price {
+  margin-block: clamp(20px, 10.5vw, 200px);
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0.6rem 0;
+  flex-direction: column;
+  justify-content: center;
+  gap: clamp(1rem, 3.3vw, 4rem);
 }
 
-.category-container .ratings {
+.category-top {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
-  margin-top: 2rem;
+  gap: clamp(2rem, 3.3vw, 4rem);
 }
 
-.category-container h4 {
-  font-weight: 500;
-  font-size: 1.1rem;
+.category-title {
+  font-size: clamp(2rem, 3.3vw, 4rem);
 }
 
-.category-container p {
-  color: gray;
-  font-size: 14px;
+.category-tab-btns {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: clamp(1rem, 1.3vw, 1.5rem);
 }
 
-.category-container .btn-primary {
-  border: 1px solid #034e849d;
-  color: #034e849d;
-}
-
-.category-container .btn-primary:hover {
-  background: #034e849d;
+.category-tab-btns > button {
+  font-size: clamp(1rem, 1.3vw, 1.5rem);
+  padding: 0.6rem 1.5rem;
+  border-radius: 100vw;
+  border: 1px solid #fff;
+  background-color: transparent;
   color: #fff;
 }
 
-.category-container .grid {
-  display: grid;
-  /* grid-template-columns: repeat(4, 1fr); */
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  gap: 1rem;
+.category-carousel-container .scene {
+  position: relative;
+  width: clamp(300px, 41.7vw, 800px);
+  height: clamp(200px, 28.6vw, 550px);
+  margin: 0px auto;
+  perspective: 1000px;
 }
 
-.category-container .category-title {
-  font-size: 2.5rem;
-  color: #034f84;
-  width: min-content;
-  margin: 0 auto;
-  margin-bottom: 2rem;
+.category-carousel-container .carousel {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transform-style: preserve-3d;
 }
 
-.category-container .star {
-  display: inline;
-  margin-right: 2px;
-  color: rgb(233, 142, 22);
+.carousel__cell {
+  --w: 100%;
+  --h: 100%;
+  --top: 0;
+  --left: 0;
+  position: absolute;
+  width: var(--w);
+  height: var(--h);
+  top: var(--top);
+  left: var(--left);
+  line-height: 116px;
+  font-size: 80px;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  transition: transform 1s, opacity 1s;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
+.carousel__cell img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* .carousel__cell:nth-child(9n + 1) {
+  background: hsla(0, 100%, 50%, 0.8);
+}
+.carousel__cell:nth-child(9n + 2) {
+  background: hsla(40, 100%, 50%, 0.8);
+}
+.carousel__cell:nth-child(9n + 3) {
+  background: hsla(80, 100%, 50%, 0.8);
+}
+.carousel__cell:nth-child(9n + 4) {
+  background: hsla(120, 100%, 50%, 0.8);
+}
+.carousel__cell:nth-child(9n + 5) {
+  background: hsla(160, 100%, 50%, 0.8);
+}
+.carousel__cell:nth-child(9n + 6) {
+  background: hsla(200, 100%, 50%, 0.8);
+}
+.carousel__cell:nth-child(9n + 7) {
+  background: hsla(240, 100%, 50%, 0.8);
+}
+.carousel__cell:nth-child(9n + 8) {
+  background: hsla(280, 100%, 50%, 0.8);
+}
+.carousel__cell:nth-child(9n + 0) {
+  background: hsla(320, 100%, 50%, 0.8);
+} */
+
+.carousel__cell:nth-child(1) {
+  --tz: 824px;
+  transform: rotateY(0deg) translateZ(var(--tz));
+}
+.carousel__cell:nth-child(2) {
+  --tz: 824px;
+  transform: rotateY(40deg) translateZ(var(--tz));
+}
+.carousel__cell:nth-child(3) {
+  --tz: 824px;
+  transform: rotateY(80deg) translateZ(var(--tz));
+}
+.carousel__cell:nth-child(4) {
+  --tz: 824px;
+  transform: rotateY(120deg) translateZ(var(--tz));
+}
+.carousel__cell:nth-child(5) {
+  --tz: 824px;
+  transform: rotateY(160deg) translateZ(var(--tz));
+}
+.carousel__cell:nth-child(6) {
+  --tz: 824px;
+  transform: rotateY(200deg) translateZ(var(--tz));
+}
+.carousel__cell:nth-child(7) {
+  --tz: 824px;
+  transform: rotateY(240deg) translateZ(var(--tz));
+}
+.carousel__cell:nth-child(8) {
+  --tz: 824px;
+  transform: rotateY(280deg) translateZ(var(--tz));
+}
+.carousel__cell:nth-child(9) {
+  --tz: 824px;
+  transform: rotateY(320deg) translateZ(var(--tz));
 }
