--- a/src/components/NewArival/NewArival.css
+++ b/src/components/NewArival/NewArival.css
@@ -1,16 +1,17 @@
-@font-face {
+/* @font-face {
   font-family: "Brice Bold";
   src: url("../../../public/fonts/Brice/Brice-Bold.otf");
   font-weight: bold;
-}
+} */
 
 .new-arrival-container {
   width: 100vw;
   height: 100vh;
   /* margin-block-start: clamp(5rem, 10.5vw, 12.5rem); */
-  margin-block-start: 100px;
+  margin-block-start: 200px;
   position: relative;
   overflow: hidden;
+  padding-inline: 2rem;
 }
 
 .new-arrival-container video {
@@ -52,12 +53,18 @@
 }
 
 @media (min-aspect-ratio: 16/9) {
+
+
+
   video {
     width: 100%;
     height: auto;
   }
 }
 @media (max-aspect-ratio: 16/9) {
+  .new-arrival-container{
+    padding-inline: 0rem;
+  }
   video {
     width: auto;
     height: 100%;
