--- a/src/components/NewCollention/NewCollention.css
+++ b/src/components/NewCollention/NewCollention.css
@@ -15,6 +15,7 @@
   grid-template-columns: 1fr 1fr;
   gap: 8rem;
   overflow: hidden;
+  box-shadow: 0.8rem 0.8rem 0 #18c1c1;
 }
 
 .new-collection-container::after {
@@ -35,7 +36,7 @@
   height: 100%;
   object-fit: cover;
   border-radius: 1rem;
-  border: 1px solid #020617;
+  /* border: 1px solid #020617; */
 }
 
 .new-collection-images-container {
@@ -45,18 +46,26 @@
 }
 
 .new-collection-images-container > img:first-child {
-  transform: rotate(-2deg);
+  transform: rotate(0deg);
+  transition: transform 200ms;
 }
 .new-collection-images-container > img:last-child {
   position: absolute;
   z-index: -1;
   top: 0;
   left: 0;
-  transform: rotate(2deg);
-  transition: z-index 200ms;
+  transform: rotate(4deg);
+  opacity: 0.5;
+  transition: opacity 200ms, transform 200ms;
 }
 .new-collection-images-container:hover > img:last-child {
+  transform: rotate(0deg);
+  opacity: 1;
   z-index: 2;
+}
+.new-collection-images-container:hover > img:first-child {
+  transform: rotate(4deg);
+
 }
 .new-collection-info-container {
   display: flex;
