--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -39,6 +39,8 @@
   height: clamp(200px, 28.6vw, 550px);
   margin: 0px auto;
   perspective: 1000px;
+  cursor: grab;
+  user-select: none;
 }
 
 .category-carousel-container .carousel {
@@ -46,9 +48,11 @@
   height: 100%;
   position: absolute;
   transform-style: preserve-3d;
+  user-select: none;
 }
 
 .carousel__cell {
+  user-select: none;
   --w: 100%;
   --h: 100%;
   --top: 0;
@@ -72,35 +76,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  user-select: none;
 }
-
-/* .carousel__cell:nth-child(9n + 1) {
-  background: hsla(0, 100%, 50%, 0.8);
-}
-.carousel__cell:nth-child(9n + 2) {
-  background: hsla(40, 100%, 50%, 0.8);
-}
-.carousel__cell:nth-child(9n + 3) {
-  background: hsla(80, 100%, 50%, 0.8);
-}
-.carousel__cell:nth-child(9n + 4) {
-  background: hsla(120, 100%, 50%, 0.8);
-}
-.carousel__cell:nth-child(9n + 5) {
-  background: hsla(160, 100%, 50%, 0.8);
-}
-.carousel__cell:nth-child(9n + 6) {
-  background: hsla(200, 100%, 50%, 0.8);
-}
-.carousel__cell:nth-child(9n + 7) {
-  background: hsla(240, 100%, 50%, 0.8);
-}
-.carousel__cell:nth-child(9n + 8) {
-  background: hsla(280, 100%, 50%, 0.8);
-}
-.carousel__cell:nth-child(9n + 0) {
-  background: hsla(320, 100%, 50%, 0.8);
-} */
 
 .carousel__cell:nth-child(1) {
   --tz: 824px;
