--- a/src/components/NewCollention/NewCollention.css
+++ b/src/components/NewCollention/NewCollention.css
@@ -1,9 +1,7 @@
 .new-collection-container {
-  width: min(90vw, 1500px);
+  width: min(95vw, 1500px);
   max-block-size: 600px;
-  padding-inline: 5rem;
-  padding-block: 5rem;
-  aspect-ratio: 16/9;
+  padding: clamp(1.5rem, 4.2vw, 5rem);
   border-radius: 2rem;
   margin-inline: auto;
   margin-block-start: 50px;
@@ -13,7 +11,7 @@
   z-index: 10;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 8rem;
+  gap: clamp(2rem, 6.7vw, 8rem);
   overflow: hidden;
   box-shadow: 0.8rem 0.8rem 0 #18c1c1;
 }
@@ -24,6 +22,7 @@
   z-index: -1;
   top: 0;
   right: 0;
+
   background-color: #020617;
   width: 52%;
   height: 100%;
@@ -36,7 +35,6 @@
   height: 100%;
   object-fit: cover;
   border-radius: 1rem;
-  /* border: 1px solid #020617; */
 }
 
 .new-collection-images-container {
@@ -65,7 +63,6 @@
 }
 .new-collection-images-container:hover > img:first-child {
   transform: rotate(4deg);
-
 }
 .new-collection-info-container {
   display: flex;
@@ -77,10 +74,10 @@
   color: #fff;
 }
 .new-collection-info-container > p {
-  font-size: 1.5rem;
+  font-size: clamp(1.2rem, 1.3vw, 1.5rem);
 }
 .new-collection-info-container > h4 {
-  font-size: 3.5rem;
+  font-size: clamp(2rem, 3vw, 3.5rem);
   line-height: 1.2;
   font-family: "Brice Bold";
 }
@@ -92,4 +89,45 @@
 }
 .new-collection-info-container .btn-primary:hover {
   box-shadow: 0px 0px 0px #fff;
+}
+
+@media (max-width: 768px) {
+  .new-collection-container {
+    max-block-size: unset;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    box-shadow: 0.5rem 0.5rem 0 #18c1c1;
+  }
+
+  .new-collection-container::after {
+    top: unset;
+    right: unset;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    border-bottom-left-radius: unset;
+    border-top-left-radius: unset;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+  }
+
+  .new-collection-container img {
+    height: auto;
+  }
+
+  .new-collection-info-container {
+    text-align: center;
+  }
+
+  .new-collection-info-container > p {
+    font-size: clamp(1rem, 3.2vw, 1.5rem);
+  }
+  .new-collection-info-container > h4 {
+    font-size: clamp(1.5rem, 6.3vw, 3rem);
+  }
+
+  .new-collection-info-container .btn-primary {
+    margin-inline: auto;
+  }
 }
