--- a/src/components/NewArival/NewArival.css
+++ b/src/components/NewArival/NewArival.css
@@ -1,14 +1,7 @@
-/* @font-face {
-  font-family: "Brice Bold";
-  src: url("../../../public/fonts/Brice/Brice-Bold.otf");
-  font-weight: bold;
-} */
-
 .new-arrival-container {
   width: 100vw;
   height: 100vh;
-  /* margin-block-start: clamp(5rem, 10.5vw, 12.5rem); */
-  margin-block-start: 200px;
+  margin-block-start: clamp(50px, 10.5vw, 200px);
   position: relative;
   overflow: hidden;
   padding-inline: 2rem;
@@ -41,6 +34,7 @@
   color: #fff;
   font-size: clamp(2.5rem, 8.3vw, 10rem);
   font-family: "Brice Bold";
+  line-height: 1.4;
   width: max-content;
   text-align: center;
 }
@@ -53,16 +47,13 @@
 }
 
 @media (min-aspect-ratio: 16/9) {
-
-
-
   video {
     width: 100%;
     height: auto;
   }
 }
 @media (max-aspect-ratio: 16/9) {
-  .new-arrival-container{
+  .new-arrival-container {
     padding-inline: 0rem;
   }
   video {
