--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -28,11 +28,11 @@
   z-index: 2;
   width: 100%;
   height: 100%;
-  /* background-image: linear-gradient(
-    to right,
+  background-image: linear-gradient(
+    to bottom,
     rgba(10, 38, 71, 0.3),
     transparent
-  ); */
+  );
   display: grid;
   place-items: center;
 }
@@ -115,7 +115,7 @@
   height: 100%;
   object-fit: cover;
   border-radius: 1rem;
-  filter: brightness(0.7);
+  filter: brightness(0.8);
 }
 /* -----------------------------
  hero image slider styles ends
@@ -128,7 +128,7 @@
     height: unset;
   }
   .hero-container {
-    margin-block: 4rem 4rem;
+    margin-block: 4rem 6rem;
   }
   .hero-layer-contaner {
     all: unset;
