--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,19 +1,30 @@
+.nav-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100vw;
+  backdrop-filter: blur(20px);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5rem 0;
+  padding: 1rem 0;
+  width: min(100vw, 1600px);
+  margin-inline: auto;
 }
 nav img {
-  width: 50px;
-  height: 50px;
+  width: 55px;
+  height: 55px;
   border-radius: 9999px;
-  object-fit: cover;
+  object-fit: contain;
 }
 nav h4 {
   font-weight: 500;
   font-size: 1.5rem;
-  color: #034f84;
+  color: #fff;
 }
 nav .logo-container {
   display: flex;
@@ -23,27 +34,33 @@ nav .logo-container {
 nav ul {
   display: flex;
   align-items: center;
-  gap: 1.2rem;
+  gap: 1.5rem;
+}
+
+nav .btn-primary {
+  font-size: 1.1rem;
+  box-shadow: -2px 2px 0px #fff;
 }
 
 nav li {
-  color: #000;
+  color: #fff;
 }
 
 nav li:hover a {
+  color: #c4dfdf;
   text-decoration: underline;
-  color: blue;
 }
 
 nav .profile-img {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 nav .active {
-  color: blue;
+  color: #c4dfdf;
+  text-decoration: underline;
 }
 nav .pending {
   opacity: 0.5;
