--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,12 @@
+.footer-container {
+  backdrop-filter: blur(20px);
+}
 .footer {
-  margin: 100px 0 20px 0;
+  margin-block-start: 100px;
+  margin-inline: auto;
+  padding-inline: 0.8rem;
+  padding-block: 2rem;
+  width: min(100vw, 1400px);
 }
 
 .footer .top {
@@ -36,7 +43,7 @@ span {
   align-items: center;
 }
 
-.left img{
+.left img {
   width: 50px;
   height: 50px;
   border-radius: 9999px;
@@ -54,13 +61,12 @@ span {
   color: gray;
 }
 
-.social{
+.social {
   font-size: 1.5rem;
   display: flex;
   gap: 0.7rem;
   cursor: pointer;
 }
-
 
 @media (max-width: 768px) {
   .footer .top {
