--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -28,11 +28,11 @@
   z-index: 2;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     to bottom,
     rgba(10, 38, 71, 0.3),
     transparent
-  );
+  ); */
   display: grid;
   place-items: center;
 }
@@ -122,13 +122,19 @@
  ------------------------------- */
 
 @media (max-width: 799px) {
+  .mobile-hero-img {
+    display: block;
+  }
+  .hero-scene {
+    display: none;
+  }
   .hero-container,
   .hero-scene {
     width: unset;
     height: unset;
   }
   .hero-container {
-    margin-block: 4rem 6rem;
+    margin-block: 8rem;
   }
   .hero-layer-contaner {
     all: unset;
@@ -136,12 +142,5 @@
   .hero-container::before {
     width: 80vw;
     height: 80vw;
-  }
-
-  .mobile-hero-img {
-    display: block;
-  }
-  .hero-scene {
-    display: none;
   }
 }
