--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,14 +4,25 @@
   left: 0;
   z-index: 999;
   width: 100vw;
-  backdrop-filter: blur(20px);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  background-color: rgba(0, 0, 0, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  transform: translateY(0);
+  transition: transform 300ms ease-in;
 }
+
+@supports (backdrop-filter: blur(20px)) {
+  .nav-container {
+    background-color: unset;
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+  }
+}
+
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 0;
+  padding: 1rem 0.8rem;
   width: min(100vw, 1600px);
   margin-inline: auto;
 }
@@ -67,6 +78,7 @@ nav .pending {
 }
 
 nav .bar {
+  color: #fff;
   display: none;
 }
 
@@ -86,15 +98,16 @@ nav .bar {
     color: #fff;
   }
 
-  .open {
+  nav ul.open {
     display: block;
-    background-color: #034e84c6;
-    position: absolute;
+    position: fixed;
     top: 70px;
     right: 10px;
+    background-color: rgba(2, 6, 23, 0.9);
     display: flex;
     flex-direction: column;
     padding: 2rem;
     border-radius: 4px;
+    border: 1px solid rgba(255, 255, 255, 0.2);
   }
 }
