--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -4,13 +4,29 @@
   flex-direction: column;
   justify-content: center;
   gap: clamp(1rem, 3.3vw, 4rem);
+  /* border: 1px solid #fff; */
+  position: relative;
+  isolation: isolate;
+}
+
+.category-container::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 50%;
+  z-index: -1;
+  width: 400px;
+  height: 400px;
+  transform: translateX(-50%);
+  background-color: #22d3ee;
+  filter: blur(200px);
 }
 
 .category-top {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: clamp(2rem, 3.3vw, 4rem);
+  gap: clamp(2rem, 3vw, 3.6rem);
 }
 
 .category-title {
@@ -28,9 +44,9 @@
   font-size: clamp(1rem, 1.3vw, 1.5rem);
   padding: 0.6rem 1.5rem;
   border-radius: 100vw;
-  border: 1px solid #fff;
+  border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: transparent;
-  color: #fff;
+  color: rgba(255, 255, 255, 0.7);
 }
 
 .category-carousel-container .scene {
