--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,11 +1,27 @@
 .footer-container {
-  backdrop-filter: blur(20px);
-}
-.footer {
+  /* backdrop-filter: blur(20px); */
+  background-color: #009F85;
+  position: relative;
+  color: #fff;
   margin-block-start: 100px;
-  margin-inline: auto;
   padding-inline: 0.8rem;
-  padding-block: 2rem;
+  padding-block: 4rem 2rem;
+}
+
+/* .footer-container::before{
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background-image: url('../../../public/assets/footer.svg');
+} */
+.footer {
+ 
+  margin-inline: auto;
+ 
   width: min(100vw, 1400px);
 }
 
@@ -26,10 +42,10 @@
 .footer h1 {
   font-size: 18px;
   font-weight: 500;
-  color: #555;
+  /* color: #555; */
 }
 span {
-  color: gray;
+  /* color: gray; */
 }
 
 .footer .bottom {
@@ -58,7 +74,7 @@ span {
 .copyright {
   margin-left: 20px;
   font-size: 12px;
-  color: gray;
+  /* color: gray; */
 }
 
 .social {
