--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,28 +1,12 @@
-.footer-container {
-  /* backdrop-filter: blur(20px); */
-  background-color: #009F85;
-  position: relative;
-  color: #fff;
-  margin-block-start: 100px;
-  padding-inline: 0.8rem;
-  padding-block: 4rem 2rem;
-}
-
-/* .footer-container::before{
-  content: '';
-  position: absolute;
-  top: -50%;
-  left: 0;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  background-image: url('../../../public/assets/footer.svg');
-} */
 .footer {
- 
-  margin-inline: auto;
- 
   width: min(100vw, 1400px);
+  background-color: #030712;
+  border: 1px solid #1f2937;
+  padding-inline: 60px;
+  padding-block: 60px;
+  margin-block: 0px 50px;
+  margin-inline: auto;
+  border-radius: 2rem;
 }
 
 .footer .top {
@@ -39,13 +23,13 @@
   font-size: 14px;
 }
 
-.footer h1 {
+.footer h6 {
   font-size: 18px;
   font-weight: 500;
-  /* color: #555; */
+  color: #e5e7eb;
 }
 span {
-  /* color: gray; */
+  color: #9ca3af;
 }
 
 .footer .bottom {
@@ -66,15 +50,10 @@ span {
   object-fit: cover;
 }
 
-.footer .logo {
-  color: blue;
-  font-weight: bold;
-  font-size: 24px;
-}
 .copyright {
-  margin-left: 20px;
+  margin-left: 10px;
   font-size: 12px;
-  /* color: gray; */
+  color: #9ca3af;
 }
 
 .social {
@@ -82,6 +61,7 @@ span {
   display: flex;
   gap: 0.7rem;
   cursor: pointer;
+  color: #9ca3af;
 }
 
 @media (max-width: 768px) {
