--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -9,6 +9,38 @@
   isolation: isolate;
 }
 
+.category-left-gradient{
+position: absolute;
+top: 50%;
+left: 0;
+z-index: -1;
+width: 800px;
+height: 200px;
+transform: translate(-10%, -50%)  rotate(-20deg);
+/* display: flex;
+flex-direction: column;
+align-items: stretch;
+justify-content: stretch; */
+display: grid;
+gap: 150px;
+
+}
+
+.category-left-gradient > div{
+  /* width: 100%;
+  height: 50%; */
+  /* border: 1px solid; */
+  filter: blur(70px);
+  /* opacity: 0.6; */
+}
+
+.category-left-gradient > div:first-child{
+  background-color: #ec4899;
+}
+.category-left-gradient > div:last-child{
+  background-color: #facc15;
+}
+
 .category-container::before{
   content: '';
   position: absolute;
@@ -18,8 +50,9 @@
   width: 400px;
   height: 400px;
   transform: translateX(-50%);
-  background-color: #22d3ee;
+  background-color: var(--primary-sky-400);
   filter: blur(200px);
+  opacity: 0.8;
 }
 
 .category-top {
