--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -15,10 +15,10 @@
   width: 400px;
   height: 400px;
   transform: translate(-50%, -50%);
-  background-color: #22d3ee;
-  /* background-color: aqua; */
+  background-color: var(--primary-sky-400);
   border-radius: 50%;
   filter: blur(180px);
+  opacity: 0.9;
 }
 
 .hero-layer-contaner {
@@ -28,11 +28,6 @@
   z-index: 2;
   width: 100%;
   height: 100%;
-  /* background-image: linear-gradient(
-    to bottom,
-    rgba(10, 38, 71, 0.3),
-    transparent
-  ); */
   display: grid;
   place-items: center;
 }
