--- a/src/components/NewArival/NewArival.css
+++ b/src/components/NewArival/NewArival.css
@@ -3,6 +3,7 @@
   height: 100vh;
   margin-block-start: clamp(80px, 5.25vw, 100px);
   position: relative;
+  isolation: isolate;
   overflow: hidden;
   padding-inline: 2rem;
 }
@@ -14,14 +15,14 @@
   border-radius: 2rem;
 }
 
-.new-arrival-overlay {
+/* .new-arrival-overlay {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-}
+} */
 
 .new-arrival-text-container {
   position: absolute;
