--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -4,29 +4,27 @@
   flex-direction: column;
   justify-content: center;
   gap: clamp(1rem, 3.3vw, 4rem);
-  /* border: 1px solid #fff; */
   position: relative;
   isolation: isolate;
 }
 
-.category-left-gradient{
-position: absolute;
-top: 50%;
-left: 0;
-z-index: -1;
-width: 800px;
-height: 200px;
-transform: translate(-10%, -50%)  rotate(-20deg);
-/* display: flex;
+.category-left-gradient {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  z-index: -1;
+  width: 800px;
+  height: 200px;
+  transform: translate(-10%, -50%) rotate(-20deg);
+  /* display: flex;
 flex-direction: column;
 align-items: stretch;
 justify-content: stretch; */
-display: grid;
-gap: 150px;
-
+  display: grid;
+  gap: 150px;
 }
 
-.category-left-gradient > div{
+.category-left-gradient > div {
   /* width: 100%;
   height: 50%; */
   /* border: 1px solid; */
@@ -34,15 +32,8 @@ gap: 150px;
   /* opacity: 0.6; */
 }
 
-.category-left-gradient > div:first-child{
-  background-color: #ec4899;
-}
-.category-left-gradient > div:last-child{
-  background-color: #facc15;
-}
-
-.category-container::before{
-  content: '';
+.category-container::before {
+  content: "";
   position: absolute;
   top: 0;
   left: 50%;
@@ -77,9 +68,15 @@ gap: 150px;
   font-size: clamp(1rem, 1.3vw, 1.5rem);
   padding: 0.6rem 1.5rem;
   border-radius: 100vw;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(196, 223, 223, 0.5);
   background-color: transparent;
-  color: rgba(255, 255, 255, 0.7);
+  /* color: rgba(255, 255, 255, 0.7); */
+  color: rgba(196, 223, 223, 0.7);
+}
+
+.category-tab-btns > button:hover {
+  border: 1px solid rgba(196, 223, 223);
+  color: rgba(196, 223, 223);
 }
 
 .category-carousel-container .scene {
