--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -1,24 +1,24 @@
 .category-container {
-  margin-block: clamp(80px, 10.5vw, 200px);
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: clamp(1rem, 3.3vw, 4rem);
-  position: relative;
+  margin-block: clamp(80px, 10.5vw, 200px);
   isolation: isolate;
 }
 
 .category-container::before {
-  content: "";
   position: absolute;
-  top: 0;
   left: 50%;
+  top: 0;
   z-index: -1;
+  content: "";
   width: 400px;
   height: 400px;
-  transform: translateX(-50%);
   background-color: var(--primary-sky-400);
   filter: blur(200px);
+  transform: translateX(-50%);
   opacity: 0.8;
 }
 
@@ -76,9 +76,9 @@
 }
 
 .category-carousel-container .carousel {
+  position: absolute;
   width: 100%;
   height: 100%;
-  position: absolute;
   transform-style: preserve-3d;
   user-select: none;
 }
@@ -116,20 +116,25 @@
 
 .carousel-cell-layer {
   position: absolute;
+  left: 0;
   bottom: 0;
   width: 100%;
-  /* height: 20%; */
   padding: 1rem 0;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.3);
   border-block-start: 1px solid rgba(255, 255, 255, 0.2);
-  backdrop-filter: blur(3px);
-  -webkit-backdrop-filter: blur(3px);
   display: grid;
   place-items: center;
-  transition: backdrop-filter 200ms;
   cursor: pointer;
   transform: translateY(100%);
   transition: transform 250ms ease-out, background-color 200ms ease-out;
+}
+
+@supports (backdrop-filter: blur(3px)) {
+  .carousel-cell-layer {
+    background-color: transparent;
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
+  }
 }
 
 .carousel-cell-layer:hover {
