--- a/src/components/ui/ProductCard/ProductCard.css
+++ b/src/components/ui/ProductCard/ProductCard.css
@@ -1,20 +1,18 @@
 .product-card {
   display: flex;
-  /* width: max-content; */
-  /* margin: 300px; */
+  display: flex;
+  flex-direction: column;
+  /* max-width: 400px; */
+  border: 1px solid var(--base-gray-50);
   border-radius: 15px;
   color: var(--base-gray-50);
-  block-size: 300px;
   overflow: hidden;
-  border: 1px solid var(--base-gray-50);
 }
-
-
 
 .product-card-img {
   /* width: 200px; */
-  width: 35%;
-  height: 100%;
+  width: 100%;
+  height: 250px;
   transform: scale(1);
   transition: transform 300ms;
   object-fit: cover;
@@ -51,10 +49,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  gap: 2rem;
   width: 100%;
   height: 100%;
   padding: 20px;
-  border-left: 1px solid var(--base-gray-50);
+  border-top: 1px solid var(--base-gray-50);
   background-color: rgb(0 0 0 / 0.4);
   opacity: 1;
 }
@@ -67,7 +66,7 @@
 .product-card-info {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
 }
 
 .product-card-info-top,
@@ -75,6 +74,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-size: 0.9rem;
 }
 
 .product-card-info-bottom {
@@ -82,7 +82,7 @@
 }
 
 .product-card-title {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 400;
   /* color: var(--primary-sky-400); */
 }
