added search bar in the toys page

--- a/src/pages/AllToys/AllToys.css
+++ b/src/pages/AllToys/AllToys.css
@@ -8,12 +8,64 @@
 .toys-top-header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding-inline: clamp(0.8rem, 6.7vw, 8rem);
-  margin-block-end: 1.5rem;
+  margin-block-end: 2rem;
 }
 
 .toys-total-count {
   font-size: 2rem;
+}
+
+.search-form-control {
+  display: flex;
+  align-items: center;
+  border-radius: 100vw;
+  /* border: 1px solid gold; */
+  /* border-top-left-radius: 100vw;border-bottom-left-radius: 100vw; */
+  overflow: hidden;
+  /* background-color: #fff; */
+  background-color: var(--primary-sky-800);
+  padding-inline-start: 1rem;
+}
+
+.search-form-control svg {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  margin-inline-end: 4px;
+}
+
+.search-form-control svg,
+.search-form-control input::placeholder {
+  color: var(--base-gray-300);
+}
+
+.search-form-control:focus-within {
+  outline: 1px solid var(--primary-sky-500);
+}
+
+.search-form-control :is(input, button) {
+  padding-block: 1rem;
+  border: none;
+  background-color: transparent;
+}
+.search-form-control :is(input, button):focus {
+  outline: 0;
+}
+.search-form-control input {
+  inline-size: 400px;
+  color: var(--base-gray-50);
+}
+.search-form-control button {
+  cursor: pointer;
+  background-color: var(--base-gray-200);
+  background-color: var(--primary-sky-700);
+  padding-inline: 1rem;
+  color: var(--primary-sky-100);
+}
+.search-form-control button:hover{
+  background-color: var(--primary-sky-600);
 }
 
 .toys-total-count span {
