toys sortby upper lower chevron toggle

--- a/src/pages/AllToys/AllToys.css
+++ b/src/pages/AllToys/AllToys.css
@@ -34,6 +34,10 @@
   height: 20px;
 }
 
+.toys-sortby-wrapper .toys-sort-upper-chevron {
+  display: none;
+}
+
 .toys-filter-sortby-wrapper button {
   background-color: transparent;
   border: 0;
